frontend/styles.css
/* STYLES FOR THE HELE SIDEN */

body {
  margin: 0;
  font-family: Arial;
  background: linear-gradient(
    to right,
    #1a1a1a,
    #6c3aff
  ); /* sort baggrund med Lilla gradient i headeren */

  h1 {
    color: #b28cff; /* lys lilla titel */
    font-family:
      "Orbitron", sans-serif; /* futuristisk font på titlen - skrifttype taget fra Google Fonts */
    letter-spacing: 2px;
    font-size: 500%;
  }
}

.mainCont { 
  margin-left: 15%; /* mainCont starter sin margin 15% inde på siden (sidebar) */
  width: 85%; /* mainCont total bredde er 85% af skærmen */
  display: flex;
  flex-direction: column;
  align-items: center; /* ALT I mainCont centreres */
  position: relative; /* Parent til Popup boxes, don't touch!! */
}

header {
  background: transparent; /* ingen baggrund for headeren - vigtigt */
}

/* SEARCH BAR */
#search {
  margin: 1%;
}
#searchInput {
  width: 500px; 
  border: 3px solid purple; 
  font-size: 16px;
}

/* HOVEDMENU, BUTTONS, LUCKY - STYLES OG PLACEMENT */
.hovedmenu {
  margin: 5%;
  display: grid;
  grid-template-columns: repeat(2, 1fr); /*2 kollonner (2x2 layout)*/
  gap: 50px; /* mellemrum mellem cellerne */
  width: 40%; /* størrelse på hovedmenuen ift. mainCont */
}

.button {
  background-color: black;
  color: yellow;
  width: 100%; /* knapperne fylder 100% af deres celler */
  padding: 40px;
  border: 4px solid purple;
  border-radius: 100px;
  box-shadow: 0 5px 5px black; /* skyggeeffekt: right px bottom px længde px farve */
  cursor: pointer;
  transition: 0.2s;
  font-size: 20px;
  font-weight: bold;
  font-family: "Montserrat", sans-serif;
}
.button:active {
  background: #333;
  transform: translateY(5px);
  box-shadow: 0 1px 1px black;
}
.button:hover {
  background: #333;
  border-color: #b300ff;
}

/* SIDEBAR STYLE */
.sidebar {
  width: 15%;
  position: fixed;
  height: 100vh;
  padding-top: 2%;
  display: flex;
  flex-direction: column;
  align-items: center; /* ALT I mainCont centreres */
  background: #292929;
  border-right: solid 2px purple;
}
/* SIDEBAR BUTTONS*/
#sidebarButtonPos {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 20px;
  width: 100%;
  justify-items: center;
  margin-top: 70%;
}
.sidebarButton {
  width: 200px;
  margin-bottom: 10%;
  padding: 10px;
  background-color: black;
  color: yellow;
  border: 2px solid purple;
  border-radius: 100px;
  box-shadow: 0 3px 3px black;
  transition: 0.2s;
  cursor: pointer;
  font-size: 16px;
  text-align: center;
  font-weight: bold;
}
.sidebarButton:active {
  background: #333;
  transform: translateY(3px);
  box-shadow: 0 1px 1px black;
}
.sidebarButton:hover {
  background-color: #222;
  border-color: #b300ff;
}

/* LOGO PLACEMENT STYLES */
#music_note_purple {
  position: relative;
  text-align: center;
  margin: 50px auto;
  float: top;
}

/* HJÆLP BUTTON STYLE */
.help-btn {
  margin-top: auto;
  cursor: pointer;
  font-family: "Montserrat", sans-serif;
}

/* KURV STYLE */
.cart-button {
  position: fixed; /* fixed betyder den ikke bevæger sig når man scroller*/
  top: 20px;
  right: 20px;
  background-color: black;
  color: yellow;
  padding: 10px 15px;
  border: 2px solid purple; /* lilla ring rundt om knappen*/
  border-radius: 8px; /* gør kanterne lidt runde*/
  cursor: pointer; /* musen(cursor) bliver til en hånd over knappen*/
  font-size: 16 px;
}
.cart-button:hover {
  background-color: #333; /* lidt lysere sort når man hover*/
}

/* POPUP BOXES FRA HOVEDMENU KNAPPER */
.hovedmenubox {
  position: absolute;
  top: 75%;
  left: 50%; /* 15% sidebar + halvdelen af 85% */
  transform: translate(-50%, -50%);

  width: 1200px;
  height: 70%;

  background-color: black;
  border: 4px solid purple;
  border-radius: 75px;
  color: white;
  z-index: 10;
}
.hovedmenubox h2 {
  color: yellow;
  font-family: "Orbitron", sans-serif;
  text-align: center;
}
#popularSongsBox {
  display: none;
}
#genreBox {
  display: none;
}
#songCataBox {
  display: none;
}
#feelingLuckyBox {
  display: none;
}

/* SCREENSAVER STYLE */
/* --- SKAL ALTID LIGGE NEDERST --- */
#screensaver {
  position: fixed;
  inset: 0;
  background: #0d0d0d; /* mørk baggrund for screensaver */
  display: none;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  p {
    font-family: "Smooch Sans", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    color: #b28cff;
    font-size: 25px;
  }

  h1 {
    font-family: "Orbitron", system-ui;
    font-weight: 400;
    font-style: normal;
    text-shadow: 2px 2px 0px #c2adf1;
  }
}

#screensaver h1 {
  font-family: "Orbitron", sans-serif;
}

body.Dvale #screensaver {
  display: flex;
}

/* POP-UP BOX STYLE */
#help-popup {
  position: fixed;
  inset: 0;
  background: rgba(0, 0, 0, 0.8);
  display: flex;
  justify-content: center;
  align-items: center;
}
#help-popup.hidden {
  display: none;
}
/* Indhold */
.help-content {
  background: #1a1a1a;
  padding: 30px;
  border-radius: 15px;
  width: 300px;
  font-family: "Montserrat", sans-serif;
}
.help-content h2 {
  margin-top: 0;
}
.help-content button {
  margin-top: 15px;
  padding: 10px;
  border: none;
  border-radius: 8px;
  cursor: pointer;
}

.help-btn {
  cursor: pointer;
  font-family: "Montserrat", sans-serif;
}
.help-btn:hover {
  color: #b28cff;
}

